--- a/Typescript/mini-project/src/components/Editor.css
+++ b/Typescript/mini-project/src/components/Editor.css
@@ -1,9 +1,13 @@
+.Editor {
+  padding-bottom: 1%;
+}
+
 .Editor > section {
   margin-bottom: 40px;
 }
 
 .Editor > section > h4 {
-  font-size: 22px;
+  font-size: 20px;
   font-weight: bold;
 }
 
@@ -12,7 +16,7 @@ textarea {
   background-color: rgb(236, 236, 236);
   border: none;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 14px;
   padding: 10px 20px;
 }
 
