--- a/NextJS/frontend/section09/src/components/modal.module.css
+++ b/NextJS/frontend/section09/src/components/modal.module.css
@@ -3,10 +3,10 @@
   max-width: 500px;
 
   margin-top: 20px;
-  margin-radius: 5px;
+  border-radius: 5px;
   border: none;
 }
 
 .modal::backdrop {
-  background-color: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.7);
 }
